Galeel | #00010 | Fixed the text truncation UI fix with tooltip

--- a/whp-web/src/main/webapp/styles/standard.css
+++ b/whp-web/src/main/webapp/styles/standard.css
@@ -73,8 +73,8 @@ body:after {
     padding-right: 20px;
     padding-top: 15px;
     padding-left: 60px;
-    border-top: 1px ridge;
-    background: #FFFFCC;
+    border-top: 2px solid #000;
+    background: #333;
 }
 
 #whp-logo {
@@ -123,7 +123,7 @@ table tr td.text-center, .text-center, .text-center th, .text-center td {
 
 
 #version {
-    color: #555555;
+    color: #DCDCDC;
     font-size: 0.8em;
 }
 
